biscuit-terminal/lib/tests/snapshots/layout_matrix__Section__align_center.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
                               ## Getting Started
                            Welcome to the tutorial.
                         Let's begin with installation.
---
TREE
## Getting Started

Welcome to the tutorial.

Let's begin with installation.
