biscuit-terminal/lib/tests/snapshots/layout_matrix__Section__width_120.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
## Getting Started

Welcome to the tutorial.

Let's begin with installation.
---
VIA_TREE_DIRECT
## Getting Started

Welcome to the tutorial.

Let's begin with installation.
